--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,20 @@
 .title {
     font-family: 'Oswald', sans-serif;
+    color: black;
+}
+
+.headerWrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.headerButton {
+    width: 40px;
+    height: 39px;
+    background-color: var(--bgdColorBtnHeader);
+    border-radius: 500px;
+    padding: 4px 12px;
+    justify-content: center;
+    align-items: center;
 }
