--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 @import '../node_modules/modern-normalize/modern-normalize.css';
 
 :root {
+  /* Variables */
+  --mainBackgroung: #F3F5FA;
+  --bgdColorBtnHeader: #DCEFD8;
+
   font-family: 'Fira Sans', sans-serif;
-  line-height: 1.5;
+  line-height: 1;
   font-weight: 400;
+  font-style: normal;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--mainBackgroung);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,21 +25,17 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+html,body {
+  margin: 0 auto;
+  /* display: flex;
+  place-items: center; */
+  min-width: 360px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
 
 button {
@@ -48,45 +49,25 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+/* button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+} */
 
 /* Reset CSS */
-
 * {
   padding: 0px;
   margin: 0px;
   border: none;
 }
 
-/* body {
-  font-family: 'Plus Jakarta Sans', sans-serif;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 1;
-  font-style: normal;
-  color: var(--primary-text-color);
+body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-} */
+}
 
 img {
   display: flex;
@@ -94,13 +75,13 @@ img {
   max-width: 100%;
 }
 
-a {
+/* a {
   text-decoration: none;
   font: inherit;
   color: inherit;
-}
+} */
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -108,7 +89,7 @@ h5,
 h6,
 p {
   font: inherit;
-}
+} */
 
 ul,
 ol {
