--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -5,7 +5,14 @@
   padding-right: 20px;
 
   @media screen and (min-width: 768px) {
-    width: 768px;
-    background-color: aquamarine;
+    min-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    min-width: 1280px;
+    padding-left: 100px;
+    padding-right: 100px;
   }
 }
