--- a/src/index.css
+++ b/src/index.css
@@ -4,30 +4,21 @@
   /* Variables */
   --mainBackgroung: #F3F5FA;
   --bgdColorBtnHeader: #DCEFD8;
+  --primaryGreenColor: #97D28B;
+  --primaryTextColor: #173D33;
 
   font-family: 'Fira Sans', sans-serif;
   line-height: 1;
   font-weight: 400;
   font-style: normal;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--primaryTextColor);
   background-color: var(--mainBackgroung);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
 }
 
 html,body {
@@ -38,30 +29,15 @@ html,body {
   min-height: 100vh;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-/* button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-
 /* Reset CSS */
 * {
   padding: 0px;
   margin: 0px;
   border: none;
+}
+
+*::after,::before{
+  display: flex;
 }
 
 body {
@@ -75,20 +51,29 @@ img {
   max-width: 100%;
 }
 
-/* a {
+svg {
+  display: flex;
+  stroke-width: 0;
+  stroke: black;
+  fill: currentColor;
+}
+
+a {
   text-decoration: none;
   font: inherit;
   color: inherit;
-} */
+}
 
-/* h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font: inherit;
+a:hover {
+  color: #535bf2;
+}
+
+button {
+  transition: border-color 0.25s;
+}
+
+/* button:hover {
+  border-color: #646cff;
 } */
 
 ul,
