--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,14 @@
   /* Variables */
   --mainBackgroung: #F3F5FA;
   --bgdColorBtnHeader: #DCEFD8;
+  --bgdColorCardBenefit: #EAEDF1;
   --primaryGreenColor: #97D28B;
   --primaryTextColor: #173D33;
 
   font-family: 'Fira Sans', sans-serif;
   line-height: 1;
   font-weight: 400;
+  font-size: 16px;
   font-style: normal;
 
   color: var(--primaryTextColor);
@@ -45,6 +47,16 @@ body {
   text-rendering: optimizeSpeed;
 }
 
+h1,h2,h3,h4,h5,h6 {
+  color: inherit;
+  font-family: 'Oswald', sans-serif;
+  line-height: 100%;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 28px;
+  font-style: normal;
+}
+
 img {
   display: flex;
   vertical-align: top;
@@ -55,17 +67,12 @@ svg {
   display: flex;
   stroke-width: 0;
   stroke: var(--primaryTextColor);
-  fill: currentColor;
 }
 
 a {
   text-decoration: none;
-  /* font: inherit;
-  color: inherit; */
-}
-
-a:hover {
-  color: #535bf2;
+  font: inherit;
+  color: inherit;
 }
 
 button {
