add setInterval on produced electr. & add lib. react-scroll

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,15 @@
+.header {
+    position: fixed;
+    top: 36px;
+    left: auto;
+    width: inherit;
+    outline: 1px solid red;
+}
+
 .headerWrap {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 36px;
-    padding-bottom: 146px;
 }
 
 .header__wrapForButton {
