--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,8 +1,16 @@
+.app__wrapper {
+  height: 100%;
+}
+
 .container {
   min-width: 360px;
+  height: 100%;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
+
+  display: flex;
+  flex-direction: column;
 
   @media screen and (min-width: 768px) {
     min-width: 768px;
