--- a/src/components/SectionContactUs/SectionContactUs.module.css
+++ b/src/components/SectionContactUs/SectionContactUs.module.css
@@ -32,6 +32,12 @@
     text-align: justify;
     font-size: 16px;
     letter-spacing: -0.8px;
+   
+}
+
+.contactUs__link:hover svg,.contactUs__link:focus svg {
+    stroke: var(--primaryGreenColor);
+        transition: all 250ms var(--timingFunction);
 }
 
 .social__list {
