--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --primaryGreenColor: #97D28B;
   --primaryTextColor: #173D33;
   --colorTextInput:#828382;
+  --timingFunction: cubic-bezier(0.4, 0, 0.2, 1);
 
   font-family: 'Fira Sans', sans-serif;
   line-height: 1;
@@ -30,7 +31,7 @@ html,body {
   place-items: center; */
   min-width: 360px;
   max-width: 1280px;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 /* Reset CSS */
