--- a/src/components/SectionWhatIsIt/SectionWhatIsIt.module.css
+++ b/src/components/SectionWhatIsIt/SectionWhatIsIt.module.css
@@ -1,7 +1,14 @@
 .whatIsIt__section {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin-top: 222px;
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 240px;
+    }
 }
 
 .whatIsIt__section::after {
@@ -16,13 +23,35 @@
     width: 320px;
     font-size: 36px;
     margin-bottom: 24px;
+
+    @media screen and (min-width: 768px) {
+        width: 300px;
+        font-size: 48px;
+        flex-shrink: 0;
+        margin-bottom: 0;
+    }
+}
+
+.wrapper {
+    flex-basis: 50%;
 }
 
 .whatIsIt__postTitle {
     margin-bottom: 24px;
     text-align: justify;
+
+    @media screen and (min-width: 768px) {
+       text-align: start;
+        margin-bottom: 43px;
+        letter-spacing: -0.64px;
+    }
 }
 
 .button__wrap {
+    display: table;
     margin: 0 auto;
+
+    @media screen and (min-width: 768px) {
+        display: block;
+    }
 }
