--- a/src/components/SocialMediaComponent/SocialMediaComponent.module.css
+++ b/src/components/SocialMediaComponent/SocialMediaComponent.module.css
@@ -16,6 +16,11 @@
 }
 
 .social__icon {
+    stroke: var(--primaryTextColor);
+    fill: var(--primaryTextColor);
+}
+
+.social__icon:hover {
+    stroke: white;
     fill: white;
-    stroke: var(--primaryTextColor); 
 }
