--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,8 +3,27 @@
     top: 36px;
     left: 0;
     right: 0;
-    padding: 0 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    z-index: 999;
 }
+
+@media screen and (min-width: 768px) {
+    .header {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+}
+
+@media screen and (min-width: 1280px) {
+    .header {
+        top: 24px;
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+}
+      
 
 .headerWrap {
     display: flex;
