--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -23,8 +23,9 @@
     /* max-width: calc(100vw - 48px);
     max-height: calc(100vh - 24px); */
     width: 320px;
+    padding: 24px;
     background: rgba(23, 61, 51, 0.75);
-        backdrop-filter: blur(12.5px);
-        border-radius: 25px;
-        height: 568px;
+    backdrop-filter: blur(12.5px);
+    border-radius: 25px;
+    height: 568px;
 }
