--- a/src/components/SectionContactUs/SectionContactUs.module.css
+++ b/src/components/SectionContactUs/SectionContactUs.module.css
@@ -1,6 +1,5 @@
 .contactUs__section {
     padding-top: 36px;
-    padding-bottom: 24px;
     scroll-margin: 24px;
 }
 
@@ -14,6 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
+    margin-bottom: 24px;
 }
 
 .contactUs__postTitle {
@@ -49,4 +49,20 @@
     width: 48px;
     height: 48px;
     padding: 12px;
+}
+
+@media screen and (min-width: 768px) {
+    .contactUs__section {
+        display: grid;
+        grid-template-columns:repeat(2, 1fr);
+        grid-template-rows: auto;
+    }
+
+    .contactUs__title {
+        grid-column: span 2;
+    }
+
+    .main__wrap {
+        
+    }
 }
