--- a/src/components/SectionWhatIsIt/SectionWhatIsIt.module.css
+++ b/src/components/SectionWhatIsIt/SectionWhatIsIt.module.css
@@ -3,12 +3,6 @@
     flex-direction: column;
     margin-top: 222px;
 
-    @media screen and (min-width: 768px) {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: 240px;
-    }
 }
 
 .whatIsIt__section::after {
@@ -23,13 +17,6 @@
     width: 320px;
     font-size: 36px;
     margin-bottom: 24px;
-
-    @media screen and (min-width: 768px) {
-        width: 300px;
-        font-size: 48px;
-        flex-shrink: 0;
-        margin-bottom: 0;
-    }
 }
 
 .wrapper {
@@ -39,19 +26,64 @@
 .whatIsIt__postTitle {
     margin-bottom: 24px;
     text-align: justify;
-
-    @media screen and (min-width: 768px) {
-       text-align: start;
-        margin-bottom: 43px;
-        letter-spacing: -0.64px;
-    }
 }
 
 .button__wrap {
     display: table;
     margin: 0 auto;
+}
 
-    @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
+    .whatIsIt__section {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 240px;
+    }   
+
+    .whatIsIt__title {
+        width: 300px;
+        font-size: 48px;
+        flex-shrink: 0;
+        margin-bottom: 0;
+    }
+
+    .whatIsIt__postTitle {
+        text-align: start;
+        margin-bottom: 43px;
+        letter-spacing: -0.64px;
+    }
+
+    .button__wrap {
         display: block;
     }
+    
+}
+
+@media screen and (min-width: 1280px) {
+    .whatIsIt__section {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 264px;
+    }
+
+    .wrapper {
+        flex-basis: 363px 
+    }
+
+    .whatIsIt__title {
+        width: 485px;
+        font-size: 64px;
+        flex-shrink: 0;
+    }
+
+    .whatIsIt__postTitle {
+        margin-bottom: 20px;
+    }
+
+    .button__wrap {
+        display: block;
+    }
+
 }
