--- a/src/components/ContactFormComponent/ContactFormComponent.module.css
+++ b/src/components/ContactFormComponent/ContactFormComponent.module.css
@@ -5,7 +5,14 @@
     background-color: var(--bgdColorCardBenefit);
 }
 
+.position__wrap {
+    width: 100%;
+    position: relative;
+    margin-bottom: 28px;
+}
+
 .form__label {
+    display: inline-flex;
     text-align: justify;
     letter-spacing: -0.64px;
     margin-bottom: 8px;
@@ -17,11 +24,31 @@
     color: var(--colorTextInput);
     font-size: 18px;
     letter-spacing: -0.72px;
-    margin-bottom: 28px;
     border-bottom: 1px solid var(--primaryGreenColor);
     padding-bottom: 8px;
 }
 
+.form__input.error__color {
+    border-bottom: 1px solid var(--colorErrorMessage);
+}
+
+.form__textarea {
+    min-height: 124px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 124px;
+}
+
 .button__wrap {
     margin-left: auto;
+}
+
+.form__error {
+    position: absolute;
+    right: 0;
+    margin-top: 8px;
+    color: var(--colorErrorMessage);
+    font-size: 12px;
+    letter-spacing: -0.48px;
 }
