--- a/src/components/AdressComponent/AdressComponent.module.css
+++ b/src/components/AdressComponent/AdressComponent.module.css
@@ -1,8 +1,9 @@
 .adress {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
-    gap: 8px;
+    align-items: center;
+    gap: 16px;
 }
 
 .adress__link {
@@ -14,6 +15,9 @@
    color: var(--primaryGreenColor);
 }
 
-.adress__text {
-    display: none;
+@media screen and (min-width: 768px) {
+    .adress {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
