--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,22 @@
 .header {
     position: fixed;
-    top: 36px;
+    top: 0;
     left: 0;
     right: 0;
-    padding-left: 20px;
-    padding-right: 20px;
     z-index: 999;
+    transition: all 0.5s var(--timingFunction);
+}
+
+.headerWrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 36px 20px;
+    max-width: 1280px;
 }
 
 @media screen and (min-width: 768px) {
-    .header {
+    .headerWrap {
         padding-left: 30px;
         padding-right: 30px;
     }
@@ -17,21 +24,15 @@
 }
 
 @media screen and (min-width: 1280px) {
-    .header {
+    .headerWrap {
         top: 24px;
         padding-left: 100px;
         padding-right: 100px;
+        margin: 0 auto;
     }
 }
-      
 
-.headerWrap {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.headerWrap.headerWrap__background {
+.header.headerWrap__background {
     background-color: var(--bgdColorHeader);
 }
 
