--- a/src/components/SectionAbout/SectionAbout.module.css
+++ b/src/components/SectionAbout/SectionAbout.module.css
@@ -1,18 +1,78 @@
 .about__section {
     padding-top: 24px;
+    margin: 0 auto;
 }
 
 .about__title {
+    width: 319px;
     margin-bottom: 24px;
 }
 
 .about__postTitle {
     text-align: justify;
     margin-bottom: 36px;
+    letter-spacing: -0.64px;
+}
+
+.block__list {
+    width: 320px;
+    margin: 0 auto;
+    display: flex;
+
+    gap: 24px;
+}
+
+.block__list:not(:last-child) {
+    margin-bottom: 24px;
 }
 
 .card__list {
     display: flex;
-    flex-wrap: wrap;
     gap: 24px;
+}
+
+.about__img {
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .about__title {
+        width: 272px;
+        font-size: 36px;
+    }
+
+    .about__img {
+        display: flex;
+    }
+
+    .main__wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 24px;
+    }
+
+    .about__title {
+        width: 342px;
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .about__postTitle {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .left {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .right {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+
+}
+
+@media screen and (min-width: 1280px) {
+    .main__wrapper {
+        grid-column-gap: 44px;
+    }
 }
