--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ html,body {
   min-width: 360px;
   max-width: 1280px;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 /* Reset CSS */
@@ -88,10 +89,6 @@ a {
 button {
   transition: border-color 0.25s var(--timingFunction);
 }
-
-/* button:hover {
-  border-color: #646cff;
-} */
 
 ul,
 ol {
